# vision-mcp

./: .gitignore  Cargo.toml  LICENSE  README.md  config.example.toml
.agents/skills/vision-mcp/: SKILL.md
.github/workflows/: build.yml
src/: cli.rs  config.rs  core.rs  image.rs  lib.rs  main.rs  mcp.rs
src/adapter/: mod.rs
tests/: adapters.rs
